kubernetes/api-gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
    visualize: 'true'
  name: api-gateway
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: api-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
    visualize: 'true'
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
      visualize: 'true'
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: api-gateway
        visualize: 'true'
      annotations:
        visualizer/uses: student-service, registration-service
    spec:
      containers:
      - name: api-gateway
        image: gcr.io/cnc-app-dev-1/swarm/gcp-istio-api-gateway:v20 
        ports:
        - name: http
          containerPort: 8080
