kubernetes/student-service-deployment.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Students service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: student-service
  labels:
    app: student-service
    visualize: 'true'
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: student-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: student-service
    visualize: 'true'
  name: student-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
      visualize: 'true'
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: student-service
        version: v1
        visualize: 'true'
    spec:
     containers:
      - name: student-api
        image: gcr.io/cnc-app-dev-1/swarm/gcp-istio-student-service:v20
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
